# Aurumcoin-AU

./: CONTRIBUTING.md  INSTALL  Makefile.am  README.md  aurumcoin.conf  configure.ac  libaurumcoinconsensus.pc.in
build-aux/m4/: aurumcoin_find_bdb48.m4  aurumcoin_qt.m4  aurumcoin_subdir_to_include.m4
contrib/: README.md  aurumcoin-qt.pro  aurumcoind.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/debian/: README.md  aurumcoin-qt.desktop  aurumcoin-qt.install  aurumcoin-qt.lintian-overrides  aurumcoin-qt.protocol  aurumcoin-tx.install  aurumcoind.bash-completion  aurumcoind.examples  aurumcoind.install  aurumcoind.lintian-overrides  aurumcoind.manpages  changelog  control  copyright  rules  watch
contrib/devtools/: README.md  fix-copyright-headers.py  (+2 more)
depends/: README.md  config.site.in  description.md
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  bips.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  multiwallet-qt.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.txt  unit-tests.md  zmq.md
qa/: README.md
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.h  alert.h  amount.cpp  amount.h  arith_uint256.h  aurumcoin-cli-res.rc  aurumcoin-cli.cpp  aurumcoin-tx.cpp  aurumcoind-res.rc  aurumcoind.cpp  base58.cpp  base58.h  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoind-res.rc  bitcoind.cpp  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  core_write.cpp  dbwrapper.h  (+62 more)
src/bench/: .gitignore  bench.h
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/policy/: fees.cpp  fees.h  policy.h  rbf.h
src/primitives/: block.h  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  aurumcoin.cpp  aurumcoin.qrc  aurumcoin_locale.qrc  aurumcoinaddressvalidator.cpp  aurumcoinaddressvalidator.h  aurumcoinamountfield.cpp  aurumcoinamountfield.h  aurumcoingui.cpp  aurumcoingui.h  aurumcoinstrings.cpp  aurumcoinunits.cpp  aurumcoinunits.h  bantablemodel.h  bitcoin.cpp  bitcoin_locale.qrc  bitcoinaddressvalidator.cpp  bitcoingui.cpp  bitcoinstrings.cpp  bitcoinunits.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  (+57 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  debugwindow.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: aurumcoin_af_ZA.ts  aurumcoin_ar.ts  aurumcoin_be_BY.ts  aurumcoin_bg.ts  aurumcoin_bg_BG.ts  aurumcoin_bs.ts  aurumcoin_ca.ts  aurumcoin_ca@valencia.ts  aurumcoin_ca_ES.ts  aurumcoin_cs.ts  aurumcoin_cs_CZ.ts  aurumcoin_cy.ts  aurumcoin_da.ts  aurumcoin_de.ts  aurumcoin_el.ts  aurumcoin_el_GR.ts  aurumcoin_en.ts  aurumcoin_en_GB.ts  aurumcoin_eo.ts  aurumcoin_es.ts  aurumcoin_es_CL.ts  aurumcoin_es_DO.ts  aurumcoin_es_ES.ts  aurumcoin_es_MX.ts  aurumcoin_es_UY.ts  aurumcoin_es_VE.ts  aurumcoin_et.ts  aurumcoin_eu_ES.ts  aurumcoin_fa.ts  aurumcoin_fa_IR.ts  aurumcoin_fi.ts  aurumcoin_fr.ts  aurumcoin_fr_CA.ts  aurumcoin_fr_FR.ts  aurumcoin_gl.ts  aurumcoin_he.ts  aurumcoin_hi_IN.ts  aurumcoin_hr.ts  aurumcoin_hu.ts  aurumcoin_id_ID.ts  (+107 more)
src/qt/res/: aurumcoin-qt-res.rc  bitcoin-qt-res.rc
src/qt/test/: paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/script/: aurumcoinconsensus.cpp  aurumcoinconsensus.h  interpreter.cpp  interpreter.h  script.h  script_error.h  sigcache.h  sign.h  standard.cpp  standard.h
src/secp256k1/: .gitignore  Makefile.am  README.md  libsecp256k1.pc  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/: libsecp256k1-config.h  libsecp256k1-config.h.in  tests.c
src/secp256k1/src/java/: org_aurumcoin_NativeSecp256k1.c  org_aurumcoin_NativeSecp256k1.h
src/secp256k1/src/java/org/aurumcoin/: NativeSecp256k1.java
src/support/: cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  README.md  accounting_tests.cpp  addrman_tests.cpp  alert_tests.cpp  allocator_tests.cpp  arith_uint256_tests.cpp  aurumcoin-util-test.py  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  (+15 more)
src/test/data/: README.md  aurumcoin-util-test.json
src/univalue/lib/: univalue_escapes.h
src/wallet/: crypter.h  db.h  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  wallet_ismine.h  walletdb.cpp  walletdb.h
src/wallet/test/: wallet_tests.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
(+126 files in other folders)
